@@ -18,6 +18,7 @@ DIST texlive-20110705-source.tar.xz 131207904 RMD160 fbcad494cc4717a0238ab2624f2
 DIST texlive-core-patches-29.tar.xz 7100 RMD160 06e9e1a6e4dca828ceb746f443e93951892e8114 SHA1 4f0eb3e5925c42f73dfce4a366e5b1994fce0689 SHA256 629bad9dd08bb9ebfdda0994111e06a79960badd55d0e0615cdddc8b53126b99
 DIST texlive-core-patches-31.tar.xz 3108 RMD160 dd3597cc7cab7e7035540544b575706d5f8a7d74 SHA1 b8d927bc484005470a0dc7f49cdabc0461186634 SHA256 69ec6e7d69e5c9feb50f115ca40ee4cd161ea319871adbc314f884b5055fcf91
 DIST texlive-core-patches-33.tar.xz 3844 RMD160 a7b69f57e62b7450727a7668ab3fed676d424348 SHA1 71dc305a8ce296bd16e37f86a29608586007646a SHA256 ca71e16aabf0a85f5bc514ca30fa959693ba63ff1d0c0e5fa36076a4c5e8ad3a
+DIST texlive-core-patches-34.tar.xz 4320 RMD160 7a3f12ad63341b73375aa7c2b8d4b266fa0ed2b7 SHA1 5150a4521908ae1d86f1da8ce87e17aa4c7b228b SHA256 7e345747155336b04dd90434039438eba0d280ccf724824bfabe7f8799629d15
 DIST texlive-core-upstream-patches-1.tar.xz 4316 RMD160 df6d51e1ffc3f15ed7146dc9e817773bf8ad3e14 SHA1 38a258fdd7966b3f559f4d0fc0f60e01cd5cbcf6 SHA256 0a3eccc79ad608ea543e2ce04adcca0dbe968dbaebaa43014854f51d609659a5
 DIST texlive-module-a2ping-2010.tar.xz 31132 RMD160 bff661d92075f25a47652e89e4af53df59b31c97 SHA1 42e8a1f9ae922a02b31cd70776839ebe8604f741 SHA256 72f4cd7b89965d8dedc726dca0fa04c82b882b595630ab2ad7457ad9cae2b193
 DIST texlive-module-a2ping-2011.tar.xz 31132 RMD160 bff661d92075f25a47652e89e4af53df59b31c97 SHA1 42e8a1f9ae922a02b31cd70776839ebe8604f741 SHA256 72f4cd7b89965d8dedc726dca0fa04c82b882b595630ab2ad7457ad9cae2b193
@@ -197,12 +198,13 @@ DIST texlive-module-web.doc-2011.tar.xz 11512 RMD160 136c08612ade2d4f5dd70262fa7
 EBUILD texlive-core-2010-r4.ebuild 10630 RMD160 9c273af6d5345fc4e9a3c53ec629118f72d2d2df SHA1 3e6e04637070701a1d5d865fe649d71b6e26043f SHA256 239f23e858c8c93d67054436ec11d6ad2c2bb69880c3eab64fda7c2c35d58494
 EBUILD texlive-core-2011-r5.ebuild 11149 RMD160 2f82db16e7f8686907b2973fc3cdafd6174e9770 SHA1 1dbc3da535ee89d73a8631eca3fa1a5c11838081 SHA256 740f42b9f1bffda16b8a465e529c725f120bdd414bb44d34055d937fc9db6828
 EBUILD texlive-core-2011-r6.ebuild 11150 RMD160 cce51226752285f94f7200a729bb36ac85f0c3a0 SHA1 6bad1794b519b759b9977affe481813c813b7b38 SHA256 17fb3f61bd023dd5e00897d8acacd8e6487360566ad72de75aa590b61fbed610
-MISC ChangeLog 28880 RMD160 db1504e0a44857e0bb1a204509bf455fa517759a SHA1 1c81e803bb597c6d68adabe647984646cc259e95 SHA256 aa46aa02f3da8261bbc7b092065b6712d667bb2ce26b550b598731870eafaf93
+EBUILD texlive-core-2011-r7.ebuild 11149 RMD160 75c37ec9500ca8003331543add78dc3af2f06417 SHA1 77a22466b6ec92ced657af8e30682b8333f5feac SHA256 be6fa66b4ccadf22207dda7eba453f6c6d6a07b38150eb17f64f8921dbd0be59
+MISC ChangeLog 29072 RMD160 2101e7ac5daecb0551cad935b031d1ea8b6f96ef SHA1 174ececd4c1e8eb712b784ea39bf7b4e852e2fd6 SHA256 507b3fe1bf98dac96fc6bf3ec73c11a9fc3fd7538f16236f6b5e984fbb1da3f4
 MISC metadata.xml 448 RMD160 c56e123fc21192bc5cbdba7eb6a3838f251c8342 SHA1 afac1f79f72c02806e1294282d7745b4d89deac6 SHA256 ddaca86e81c2eaf01ff5e7d613777a6c2231ed0f09646cb303e23b0e90c08d02
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CBnQACgkQX3X2B8XHTon2UACfShD1K6yhP0wxKoczPC+AVDST
-WAkAn3bwkczuFAvM7tTL3QugRS5Wm/D3
-=UcfE
+iEYEARECAAYFAk/LMrgACgkQX3X2B8XHTolXiACdE/wWCNyt7UURRITc4BWd4JfM
+zsUAnRR+QXJqXIq5p/7l86reoNHCk1or
+=JpJS
 -----END PGP SIGNATURE-----
